--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,13 @@
-sonar.sources=src/main/java
-sonar.tests=src/test/java
-sonar.java.binaries=target/classes
-sonar.java.test.binaries=target/test-classes
-sonar.junit.reportPaths=target/surefire-reports
-sonar.jacoco.reportPaths=target/jacoco.exec
+language: java
+dist: trusty
+jdk:
+  - oraclejdk8
+addons:
+  sonarcloud:
+    organization: "cafecanudo-github"
+    token:
+      secure: $SONAR_TOKEN
+script:
+  - sonar-scanner
+after_success:
+  - mvn clean test jacoco:report
